# claw-pet

./: .gitignore  LIVE2D_SETUP.md  LIVE2D_STATUS.md  README.md  TAURI_FIX_STATUS.md  TAURI_STATUS.md  TEST_RESULTS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/plans/: 2026-03-19-development-plan.md  2026-04-01-desktop-pet-floating-design.md  2026-04-01-desktop-pet-floating-implementation.md
public/: js-test.html  live2d-test.html  standalone.html  test-live2d.html  test.html
public/examples/haru-example/: README.md
public/models/Haru/: Haru.model3.json  README.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  capabilities.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChatDialog.css  ChatDialog.tsx  Live2DPetDisplay.tsx  MessageBubble.css  MessageBubble.tsx  MessageDetailModal.css  MessageDetailModal.tsx  PetDisplay.css  PetDisplay.test.tsx  PetDisplay.tsx
src/lib/live2d/: HaruLoader.test.ts  HaruLoader.ts
src/lib/openclaw/: client.ts  protocol.ts  types.ts
src/state/: store.ts
