[package]
name = "claw-pet"
version = "1.0.0"
description = "A desktop pet powered by OpenClaw and Live2D"
authors = ["cr7hi"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-websocket = "2.0"
